<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey"
   >


      <View
          android:layout_width="match_parent"
          android:layout_height="240dp"
          android:background="@color/colorPrimary"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>
    <View
        android:id="@+id/profile_card"
        android:layout_width="340dp"
        android:layout_height="240dp"
        android:background="@drawable/circular_border"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profile_pics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <ImageView

            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_pic" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pics"
        android:text="@string/sam_esidem"
        android:textColor="#424242"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_thin"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        android:text="@string/android_developer"
        android:textSize="14sp" />
    <LinearLayout
        android:id="@+id/info_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_card"
        android:background="@drawable/circular_border"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/personalinfobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:padding="13dp"
            android:text="@string/developer_s_info"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circular_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_top"
        android:orientation="vertical"
        android:padding="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_me"
                    android:fontFamily="@font/roboto"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/my_desc" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_layout"
        android:background="@drawable/circular_border"
        app:layout_constraintTop_toBottomOf="@id/about_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="16dp">



            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/contact"
                android:textSize="17sp"
                android:fontFamily="@font/roboto"
                android:textStyle="bold" />


                <ImageView
                    android:id="@+id/phone_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/contact"
                    android:padding="10dp"
                    android:src="@android:drawable/ic_menu_call" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/contact"
                    app:layout_constraintStart_toEndOf="@id/phone_icon"
                    android:text="@string/_2348061304970"
                    android:textSize="15sp"
                    android:textColor="@color/goodgrey"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="20dp" />


                <ImageView
                    android:id="@+id/email_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintTop_toBottomOf="@id/phone_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="10dp"
                    android:src="@android:drawable/sym_action_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/phone_icon"
                    app:layout_constraintStart_toEndOf="@id/email_icon"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/goodgrey"
                    android:text="@string/samesidem_gmail_com"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="20dp" />



                <ImageView
                    android:id="@+id/location_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    app:layout_constraintTop_toBottomOf="@id/email_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@android:drawable/ic_dialog_map" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/email_icon"
                    app:layout_constraintStart_toEndOf="@id/location_icon"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/uyo_nigeria"
                    android:textSize="15sp"
                    android:textColor="@color/goodgrey"
                    android:fontFamily="@font/roboto"
                    android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/location_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/twitter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location_icon"
            app:layout_constraintStart_toEndOf="@id/twitter_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/esidemsam"
            android:textSize="15sp"
            android:textColor="@color/goodgrey"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="20dp" />
        <ImageView
            android:id="@+id/linked_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/twitter_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/linkedin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/twitter_icon"
            app:layout_constraintStart_toEndOf="@id/linked_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/esidem"
            android:textSize="15sp"
            android:textColor="@color/goodgrey"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/fb_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/linked_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/facebook" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linked_icon"
            app:layout_constraintStart_toEndOf="@id/fb_icon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/esidem"
            android:textSize="15sp"
            android:textColor="@color/goodgrey"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/skill_layout"
        android:background="@drawable/circular_border"
        app:layout_constraintTop_toBottomOf="@id/contact_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:padding="16dp">
        <TextView
            android:id="@+id/skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/skills"
            android:fontFamily="@font/roboto"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/skill_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/skills"
            android:padding="10dp"
            android:src="@android:drawable/btn_minus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/skills"
            app:layout_constraintStart_toEndOf="@id/skill_icon"
            android:text="@string/android_developer"
            android:textSize="15sp"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/skill_icon_2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/skill_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:src="@android:drawable/btn_minus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/skill_icon"
            app:layout_constraintStart_toEndOf="@id/skill_icon_2"
            android:text="@string/program_manager"
            android:textSize="15sp"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/skill_icom_3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/skill_icon_2"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:src="@android:drawable/btn_minus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/skill_icon_2"
            app:layout_constraintStart_toEndOf="@id/skill_icom_3"
            android:layout_marginLeft="20dp"
            android:text="@string/community_builder"
            android:textSize="15sp"
            android:layout_marginStart="20dp" />


        <ImageView
            android:id="@+id/skill_con_4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/skill_icom_3"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            android:src="@android:drawable/btn_minus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/skill_icom_3"
            app:layout_constraintStart_toEndOf="@id/skill_con_4"
            android:text="@string/photographer"
            android:textSize="15sp"
            android:layout_marginStart="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>